# python-stack

./: .dockerignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/actions/clear-artifacts/: action.yaml
.github/actions/dependencies/: action.yaml
.github/actions/docker-credentials-helper/: action.yaml
.github/actions/docker-login/: action.yaml
.github/actions/docker-publish/: action.yaml
.github/actions/docker-scout/: action.yaml
.github/actions/image-load/: action.yaml
.github/actions/image-save/: action.yaml
.github/actions/pass/: action.yaml
.github/workflows/: pipeline.yaml
config/: poetry.toml
configs/docker/: Dockerfile  docker-compose.yaml
configs/poetry/: config.toml
src/: main.py
test/: test_main.py
