[tool.poetry]
name = "python-stack"
version = "0.1.0"
description = ""
authors = ["Robert Beretka <to.stoiet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
