[tool.poetry]
name = "python-stack"
version = "0.0.0"
description = "python-stack"
authors = ["stoiet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"

[tool.poetry.group.production.dependencies]
uvicorn = {version = "0.27.1", extras = ["standard"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
