[tool.poetry]
name = "python-stack"
version = "0.0.0"
description = "python-stack"
authors = ["stoiet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.1"

[tool.poetry.group.production.dependencies]
uvicorn = {version = "0.34.0", extras = ["standard"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
